--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -1,4 +1,5 @@
 module:
+  address: 0
   admin_toolbar: 0
   admin_toolbar_tools: 0
   automated_cron: 0
@@ -19,6 +20,7 @@ module:
   dblog: 0
   dynamic_page_cache: 0
   editor: 0
+  entity: 0
   entity_reference_revisions: 0
   field: 0
   field_ui: 0
@@ -30,6 +32,8 @@ module:
   hdbt_component_library: 0
   hdbt_content: 0
   hdbt_hyphenopoly: 0
+  helfi_api_base: 0
+  helfi_tpr: 0
   image: 0
   jsonapi: 0
   jsonapi_defaults: 0
@@ -57,6 +61,7 @@ module:
   quick_node_clone: 0
   quickedit: 0
   rdf: 0
+  readonly_field_widget: 0
   responsive_image: 0
   search: 0
   select2: 0
@@ -65,6 +70,7 @@ module:
   syslog: 0
   system: 0
   taxonomy: 0
+  telephone: 0
   text: 0
   token: 0
   toolbar: 0
