--- a/.env
+++ b/.env
@@ -5,11 +5,18 @@
 # Docker Compose project name
 COMPOSE_PROJECT_NAME=drupal-tyollisyyspalvelut-helfi
 
+# OpenShift project name
+OC_PROJECT_NAME=
+
+# Stage file proxy origin url and folder
+STAGE_FILE_PROXY_ORIGIN=
+STAGE_FILE_PROXY_ORIGIN_DIR=
+
 # Local hostname
 DRUPAL_HOSTNAME=drupal-tyollisyyspalvelut-helfi.docker.so
 
 # Docker image
-DRUPAL_IMAGE=druidfi/drupal:8.0-web
+DRUPAL_IMAGE=ghcr.io/city-of-helsinki/drupal-web:8.0
 
 # Default source @alias where to sync database and files from
 DRUPAL_SYNC_SOURCE=main
