--- a/conf/cmi/block.block.breadcrumbs_2.yml
+++ b/conf/cmi/block.block.breadcrumbs_2.yml
@@ -16,7 +16,7 @@ plugin: system_breadcrumb_block
 settings:
   id: system_breadcrumb_block
   label: Breadcrumbs
-  label_display: visible
+  label_display: '0'
   provider: system
 visibility:
   user_role:
