--- a/conf/cmi/core.entity_form_display.paragraph.accordion.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.accordion.default.yml
@@ -20,21 +20,15 @@ targetEntityType: paragraph
 bundle: accordion
 mode: default
 content:
-  field_accordion_design:
-    type: options_select
-    weight: 2
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_accordion_heading_level:
     type: options_select
-    weight: 6
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   field_accordion_items:
     type: paragraphs
-    weight: 7
+    weight: 6
     region: content
     settings:
       title: Paragraph
@@ -52,7 +46,7 @@ content:
     third_party_settings: {  }
   field_accordion_text:
     type: text_textarea
-    weight: 5
+    weight: 4
     region: content
     settings:
       rows: 5
@@ -60,7 +54,7 @@ content:
     third_party_settings: {  }
   field_accordion_title:
     type: string_textfield
-    weight: 3
+    weight: 2
     region: content
     settings:
       size: 60
@@ -68,7 +62,7 @@ content:
     third_party_settings: {  }
   field_accordion_title_level:
     type: options_select
-    weight: 4
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -86,4 +80,5 @@ content:
 hidden:
   created: true
   field_accordion_description: true
+  field_accordion_design: true
   status: true
