--- a/conf/cmi/language.types.yml
+++ b/conf/cmi/language.types.yml
@@ -6,30 +6,34 @@ all:
   - language_url
 configurable:
   - language_interface
+  - language_content
 negotiation:
   language_content:
     enabled:
-      language-interface: 0
+      language-url: -20
+      language-selected: -14
     method_weights:
-      language-content-entity: -9
-      language-url: -8
-      language-session: -6
-      language-user: -4
-      language-browser: -2
-      language-interface: 9
-      language-selected: 12
+      language-content-entity: -19
+      language-url: -20
+      language-session: -18
+      language-user: -17
+      language-browser: -16
+      language-interface: -15
+      language-selected: -14
   language_url:
     enabled:
       language-url: 0
       language-url-fallback: 1
   language_interface:
     enabled:
-      language-url: -19
+      language-user-admin: -20
+      language-user: -19
+      language-url: -18
       language-selected: -15
     method_weights:
-      language-user: -20
-      language-url: -19
-      language-user-admin: -18
+      language-user: -19
+      language-url: -18
+      language-user-admin: -20
       language-session: -17
       language-browser: -16
       language-selected: -15
