--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -125,6 +125,7 @@ module:
   toolbar: 0
   twig_tweak: 0
   tyollisyyspalvelut_common: 0
+  tyollisyyspalvelut_elasticsearch: 0
   tyollisyyspalvelut_migrate: 0
   update: 0
   update_helper: 0
