THF-105: Index event tag taxonomy term names.

--- a/conf/cmi/search_api.index.events_fi.yml
+++ b/conf/cmi/search_api.index.events_fi.yml
@@ -5,12 +5,13 @@ dependencies:
   config:
     - field.storage.node.field_end_time
     - field.storage.node.field_event_status
+    - field.storage.node.field_event_tags
     - field.storage.node.field_id
     - field.storage.node.field_image_alt
     - field.storage.node.field_image_url
-    - field.storage.node.field_short_description
     - field.storage.node.field_location
     - field.storage.node.field_location_extra_info
+    - field.storage.node.field_short_description
     - field.storage.node.field_start_time
     - field.storage.node.field_street_address
     - field.storage.node.field_tags
@@ -18,6 +19,7 @@ dependencies:
     - search_api.server.elastic
   module:
     - node
+    - taxonomy
     - search_api
 id: events_fi
 name: 'Events FI'
@@ -44,6 +46,16 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_event_status
+  field_event_tags:
+    label: 'Event tags » Taxonomy term » Name'
+    datasource_id: 'entity:node'
+    property_path: 'field_event_tags:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_event_tags
+      module:
+        - taxonomy
   field_id:
     label: Id
     datasource_id: 'entity:node'
@@ -176,6 +188,8 @@ processor_settings:
     all_fields: true
     fields:
       - entity_type
+      - field_event_status
+      - field_event_tags
       - field_id
       - field_image_alt
       - field_image_url
