--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "drupal/jsonapi_extras": "^3.20",
         "drupal/jsonapi_image_styles": "^3.0",
         "drupal/jsonapi_menu_items": "^1.2",
+        "drupal/linkit": "6.0.0-beta4",
         "drupal/migrate_plus": "^5.1",
         "drupal/migrate_tools": "^5.0",
         "drupal/next": "^1.3",
