--- a/conf/cmi/filter.format.plain_text.yml
+++ b/conf/cmi/filter.format.plain_text.yml
@@ -1,7 +1,9 @@
 uuid: 8a1ebe5b-cabe-498f-bf40-4a20c571de31
 langcode: fi
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - helfi_api_base
 _core:
   default_config_hash: NIKBt6kw_uPhNI0qtR2DnRf7mSOgAQdx7Q94SKMjXbQ
 name: 'Plain text'
@@ -26,4 +28,10 @@ filters:
     provider: filter
     status: true
     weight: 0
+    settings: {  }
+  helfi_link_converter:
+    id: helfi_link_converter
+    provider: helfi_api_base
+    status: true
+    weight: -10
     settings: {  }
