--- a/conf/cmi/filter.format.restricted_html.yml
+++ b/conf/cmi/filter.format.restricted_html.yml
@@ -1,7 +1,9 @@
 uuid: db4fee9c-ea77-419d-a890-50cec56fc748
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - helfi_api_base
 _core:
   default_config_hash: oz6NyPDAB4HB6N9hgH2LwNVtCd-sXbMG1fbn5KsRIDI
 name: 'Restricted HTML'
@@ -30,3 +32,9 @@ filters:
     weight: 0
     settings:
       filter_url_length: 72
+  helfi_link_converter:
+    id: helfi_link_converter
+    provider: helfi_api_base
+    status: true
+    weight: -10
+    settings: {  }
