--- a/conf/cmi/language.content_settings.node.article.yml
+++ b/conf/cmi/language.content_settings.node.article.yml
@@ -17,4 +17,4 @@ id: node.article
 target_entity_type_id: node
 target_bundle: article
 default_langcode: fi
-language_alterable: false
+language_alterable: true
