--- a/conf/cmi/language.content_settings.node.page.yml
+++ b/conf/cmi/language.content_settings.node.page.yml
@@ -17,4 +17,4 @@ id: node.page
 target_entity_type_id: node
 target_bundle: page
 default_langcode: fi
-language_alterable: false
+language_alterable: true
