--- a/conf/cmi/field.field.node.article.field_content.yml
+++ b/conf/cmi/field.field.node.article.field_content.yml
@@ -5,14 +5,19 @@ dependencies:
   config:
     - field.storage.node.field_content
     - node.type.article
+    - paragraphs.paragraphs_type.accordion
+    - paragraphs.paragraphs_type.banner
     - paragraphs.paragraphs_type.columns
     - paragraphs.paragraphs_type.content_cards
+    - paragraphs.paragraphs_type.events_list
     - paragraphs.paragraphs_type.from_library
     - paragraphs.paragraphs_type.gallery
     - paragraphs.paragraphs_type.image
+    - paragraphs.paragraphs_type.liftup_with_image
     - paragraphs.paragraphs_type.list_of_links
     - paragraphs.paragraphs_type.quote
     - paragraphs.paragraphs_type.remote_video
+    - paragraphs.paragraphs_type.subheading
     - paragraphs.paragraphs_type.text
     - paragraphs.paragraphs_type.unit_search
   module:
@@ -39,21 +44,26 @@ settings:
       gallery: gallery
       list_of_links: list_of_links
       content_cards: content_cards
+      accordion: accordion
+      banner: banner
+      liftup_with_image: liftup_with_image
       from_library: from_library
       remote_video: remote_video
       unit_search: unit_search
+      events_list: events_list
       quote: quote
+      subheading: subheading
     negate: 0
     target_bundles_drag_drop:
       accordion:
         weight: -21
-        enabled: false
+        enabled: true
       accordion_item:
         weight: -20
         enabled: false
       banner:
         weight: -16
-        enabled: false
+        enabled: true
       blog_list:
         weight: 40
         enabled: false
@@ -77,7 +87,7 @@ settings:
         enabled: false
       events_list:
         weight: 47
-        enabled: false
+        enabled: true
       from_library:
         weight: 21
         enabled: true
@@ -101,7 +111,7 @@ settings:
         enabled: false
       liftup_with_image:
         weight: -15
-        enabled: false
+        enabled: true
       link:
         weight: 56
         enabled: false
@@ -140,16 +150,22 @@ settings:
         enabled: false
       subheading:
         weight: 68
-        enabled: false
+        enabled: true
       sujo_embedded:
         weight: 69
         enabled: false
       text:
         weight: -27
         enabled: true
+      unit_map:
+        weight: 73
+        enabled: false
       unit_search:
         weight: 28
         enabled: true
+      units_list:
+        weight: 75
+        enabled: false
       video:
         weight: 72
         enabled: false
