--- a/conf/cmi/core.entity_view_display.node.article.default.yml
+++ b/conf/cmi/core.entity_view_display.node.article.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.article.field_article_category
     - field.field.node.article.field_author
     - field.field.node.article.field_content
     - field.field.node.article.field_keywords
@@ -24,6 +25,7 @@ content:
     weight: 0
     region: content
 hidden:
+  field_article_category: true
   field_author: true
   field_content: true
   field_keywords: true
@@ -32,5 +34,6 @@ hidden:
   field_metatags: true
   field_search_keywords: true
   langcode: true
+  published_at: true
   search_api_excerpt: true
   toc_enabled: true
