THF-572: THF-572: Change Cron run every hour

--- a/conf/cmi/system.date.yml
+++ b/conf/cmi/system.date.yml
@@ -7,6 +7,6 @@ country:
 timezone:
   default: Europe/Helsinki
   user:
-    configurable: true
+    configurable: false
     default: 0
     warn: false
