THF-562: THF-562: Add partner_job filer

--- a/conf/cmi/field.storage.node.field_article_category.yml
+++ b/conf/cmi/field.storage.node.field_article_category.yml
@@ -17,6 +17,9 @@ settings:
     -
       value: newsletter
       label: Newsletter
+    -
+      value: partner_jobs
+      label: 'Jobs offered by partners'
   allowed_values_function: ''
 module: options
 locked: false
