--- a/conf/cmi/field.field.node.page.field_content.yml
+++ b/conf/cmi/field.field.node.page.field_content.yml
@@ -11,6 +11,7 @@ dependencies:
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.liftup_with_image
     - paragraphs.paragraphs_type.list_of_links
+    - paragraphs.paragraphs_type.news_list
     - paragraphs.paragraphs_type.notification
     - paragraphs.paragraphs_type.subheading
     - paragraphs.paragraphs_type.text
@@ -40,6 +41,7 @@ settings:
       liftup_with_image: liftup_with_image
       events_list: events_list
       notification: notification
+      news_list: news_list
       subheading: subheading
     negate: 0
     target_bundles_drag_drop:
@@ -114,7 +116,7 @@ settings:
         enabled: false
       news_list:
         weight: 62
-        enabled: false
+        enabled: true
       notification:
         weight: 60
         enabled: true
@@ -145,8 +147,14 @@ settings:
       text:
         weight: -27
         enabled: true
+      unit_map:
+        weight: 73
+        enabled: false
       unit_search:
         weight: 28
+        enabled: false
+      units_list:
+        weight: 75
         enabled: false
       video:
         weight: 72
