--- a/conf/cmi/field.storage.paragraph.field_news_filter.yml
+++ b/conf/cmi/field.storage.paragraph.field_news_filter.yml
@@ -18,6 +18,9 @@ settings:
       value: newsletter
       label: Newsletters
     -
+      value: partner_jobs
+      label: 'Jobs offered by partners'
+    -
       value: all
       label: 'All articles'
   allowed_values_function: ''
